fixed text  spacing

--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ img.logo {
 }
 a.nav-item{
     text-decoration: none;
+    font-size: 1.3rem;
+    color: black;
     margin:0.5rem;
 }
 
@@ -53,6 +55,17 @@ a.nav-item{
 .experience-container p { 
     max-width: 30ch;
 }
+.experience-item {
+    margin-bottom:1rem;
+
+}
+.experience-item-description{
+    margin:0;
+}
+
+p.courses {
+    margin:0
+}
 
 .article-container {
     display:flex;
@@ -68,8 +81,7 @@ a.nav-item{
     border: 0.1rem solid black;
     border-radius: 1rem;
     flex: 1;
-    margin-left:0.5rem;
-    margin-right:0.5rem;
+    margin:0.5rem;
 }
 .footer-container {
     display:flex;
@@ -80,6 +92,10 @@ a.nav-item{
 @media (max-width: 825px){
     header.nav {
         flex-direction: column;
+    }
+    .logo-container {
+        flex-direction: column; 
+    
     }
     .main-container {
         flex-direction: column;
